# bastau3dvisual

./: CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  presentation
assets/: data.json
src/: app.cpp  app.h  main.cpp
src/core/: edge.cpp  edge.h  graph.cpp  graph.h  node.cpp  node.h
src/modules/control/: controller_panel.h  message_bus.h  worker_panel.h
src/renderer/: graph_renderer.cpp  graph_renderer.h  node_renderer.cpp
src/ui/: overlay.h  theme.h
src/utils/: camera.cpp  camera.h  shader.h  shader_loader.cpp
